--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<title>værkstedsuge_spil</title>
 		<style>
+		<script src="./coi-serviceworker.js"></script>
 body {
 	touch-action: none;
 	margin: 0;
